--- a/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
+++ b/translations/kangyur/translations/063-001_toh220-eliminating_those_with_corrupted_discipline.xml
@@ -54,7 +54,7 @@
                                 <editor role="finalReviewer" ref="eft:person-250">Rory Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -96,7 +96,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-06T19:02:07.936Z" user="admin">06/06/2023 19:02:07</note>
+                                <note type="lastUpdated" date-time="2023-06-07T18:06:34.077Z" user="admin">07/06/2023 18:06:34</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">0.0.1</note>
                                 <note type="updated" update="translation-status" value="2.h" date-time="2020-03-16T14:58:50.259Z" user="line-tofte">2.h</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-07-05T16:22:36.428Z" user="mike">summary
@@ -149,6 +149,7 @@
                             <note type="updated" update="text-version" value="1.0.3" date-time="2023-05-22T18:38:50.829Z" user="andre">Glossary revised - activated in CG</note>
                             <note type="updated" update="text-version" value="1.0.4" date-time="2023-05-22T20:16:05.192Z" user="john">Some preliminary unfinished edits toward a revision.</note>
                             <note type="updated" update="text-version" value="1.1.1" date-time="2023-06-06T19:02:05.069Z" user="john">Title changed and several substantial edits throughout; needs further review.</note>
+                            <note type="updated" update="text-version" value="1.1.2" date-time="2023-06-07T18:06:31.13Z" user="john">Further edits to ch 1.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
@@ -500,17 +501,17 @@
                                                 attain anything, where attaining has been
                                                 relinquished, and where attainment is not truly
                                                 attained; to describe phenomena that lack purity,
-                                                that are not able to be purified, and that are not
-                                                suitable for purification; to describe phenomena
-                                                that lack thought, objects of thought, and virtuous
+                                                are without anything to be purified, and are not
+                                                relevant to purification; to describe phenomena
+                                                that lack thought, anything to be thought, and virtuous
                                                 thought; to describe phenomena that lack conceptual
                                                 elaboration, objects of conceptual elaboration, and
                                                 virtuous conceptual elaboration; to describe
-                                                phenomena that lack imputation, objects of
-                                                imputation, and virtuous imputation; to describe
-                                                phenomena that lack delusion, assembled objects, and
-                                                assembly; to describe phenomena that are baseless
-                                                and nonreferential; to describe phenomena that lack
+                                                phenomena that lack imputation, anything to be
+                                                imputed, and virtuous imputation; to describe
+                                                phenomena that lack confusion, anything to be brought together, and
+                                                bringing together; to describe phenomena that have no foundation
+                                                and are not apprehended; to describe phenomena that lack
                                                 movement, objects of movement, and virtuous
                                                 movement; to describe phenomena that are
                                                 intrinsically empty, devoid of essential nature,
@@ -652,8 +653,8 @@
                                                 taught the Dharma is vastly more amazing than
                                                 that.</p>
                                         <milestone unit="chunk" xml:id="UT22084-063-001-66"/>
-                                        <p tid="61">“Śāriputra, imagine that at the end of the great
-                                                eon of incineration, a person were to extinguish
+                                        <p tid="61">“Śāriputra, imagine that when the great
+                                                eon of incineration comes about, a person were to extinguish
                                                 that great, blazing mass of fire by spitting on it,
                                                   <ref cRef="F.5.a" type="folio" xml:id="UT22084-063-001-822"/> and then restore
                                                 the entire universe, including the celestial
@@ -753,7 +754,7 @@
                                                 terms of the doctrines of wicked beings. Śāriputra,
                                                 they overcome and destroy the doctrines of
                                                 those wicked people who have taken interest in
-                                                suchness or inalienable suchness but misunderstand
+                                                suchness or the one and only suchness but misunderstand
                                                 the words of the Thus-Gone One. Why is that?
                                                 Because, Śāriputra, whoever is a proponent of a
                                                 self, a being, a life force, a person, eternalism,
@@ -802,7 +803,7 @@
                                                 to and something external; it is free of conventions
                                                 and devoid of designations; it lacks joy and
                                                 something to be enjoyed, and it has put an end to
-                                                joy; it lacks and is free of assembling; it lacks
+                                                joy; it lacks gathering together and is free of gathering together; it lacks
                                                 going, lacks coming and going, and puts an end to
                                                 all movement; it ends all conventions; it lacks
                                                 seeing, observation, apprehending, adulteration,
@@ -823,7 +824,7 @@
                                                 the lack of transmigration; it is not harmful;<note place="end" xml:id="UT22084-063-001-77"> The
                                                   Yongle, Lithang, Narthang, Choné, Lhasa, and Stok
                                                   editions read: <foreign xml:lang="Bo-Ltn" type="term">gnon</foreign> (“oppressing”). </note>
-                                                it is without discipline and corrupted discipline;
+                                                it is without discipline and contravened discipline;
                                                 it lacks affliction, purification, absorption, <ref cRef="F.7.b" type="folio" xml:id="UT22084-063-001-826"/> attainment, the
                                                 faculty of absorption, concentration, and the result
                                                 of concentration; it is without knowing, seeing,
