--- a/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
+++ b/translations/kangyur/translations/057-006_toh147-the_sutra_teaching_the_great_compassion_of_the_tathagatas.xml
@@ -37,7 +37,7 @@
                 <sponsor ref="sponsors.xml#sponsor-2">Frank ST Gu</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.24 <date>2022</date>
+                <edition>v 1.2.25 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -69,7 +69,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T14:15:07.427Z" user="celso">20/01/2023 14:15:07</note>
+                <note type="lastUpdated" date-time="2023-06-07T18:55:35.996Z" user="admin">07/06/2023 18:55:35</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
                     increment</note>
                 <note type="updated" update="translation-status" value="2.f" date-time="2020-02-20T09:16:36.684Z" user="andreas">2.f</note>
@@ -125,6 +125,7 @@
                 <note type="updated" update="text-version" value="1.2.22" date-time="2022-12-23T16:17:47.008Z" user="konchog">Two small fixes to date ranges in intro.</note>
                 <note type="updated" update="text-version" value="1.2.23" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.2.24" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.2.25" date-time="2023-06-07T18:55:33.108Z" user="celso">change term "three groups" to "three categories"</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -4271,7 +4272,7 @@
                         Why is that? Because the tathāgatas are not forgetful. Son of noble family, as soon as tathāgatas awaken into unsurpassed,
                         perfect awakening, they behold the mindstreams of all sentient beings of the past, present, and future. Still, they are not
                         forgetful at all. Although they know the conduct of beings in accordance with reality, the tathāgatas do not let go of their
-                        wisdom regarding it. The mindfulness of tathāgatas does not deteriorate when they assign beings to three groups, engage with
+                        wisdom regarding it. The mindfulness of tathāgatas does not deteriorate when they assign beings to three categories, engage with
                         their faculties and mentalities, and behold their conduct. The tathāgatas’ teaching of the Dharma to beings happens without
                         activating their <term type="ignore">recollection</term>, without intention or analysis. Even while teaching, their
                         mindfulness does not deteriorate. Why is that? <ref cRef="F.209.b" type="folio" xml:id="UT22084-057-006-1499"/> Because the
@@ -4422,7 +4423,7 @@
                         generosity, purified by moral conduct, correctly accomplished through patience, made pliant through vigor, made flexible
                         through concentration, and investigated with insight. It is taken up with love and undiscouraged because of compassion. It is
                         joyful and radiant. It discerns with equanimity. It establishes the three vehicles. It is the unbroken lineage of the Three
-                        Jewels. It differentiates the three groups. It trains through the three gates of liberation. It is entirely suffused by the
+                        Jewels. It differentiates the three categories. It trains through the three gates of liberation. It is entirely suffused by the
                         truth and wisdom. It is not criticized by the wise but praised by the noble ones. It reaches to the limits of space and is
                         supreme in all respects. </p>
                     <milestone unit="chunk" xml:id="UT22084-057-006-668"/>
@@ -6661,12 +6662,11 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-057-006-1018">
+                        <gloss xml:id="UT22084-057-006-1018" type="term" mode="match">
                             <term>blessed one</term>
-                            <term xml:lang="Bo-Ltn">bcom ldan ’das </term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                            <term xml:lang="Sa-Ltn">bhagavān</term>
-                            <term type="definition">Epithet of a buddha.</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="attestedSource">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhagavān</term>
                             <term type="alternative">blessed</term>
                         </gloss>
                     </item>
@@ -8529,15 +8529,15 @@
                     </item>
                     <item>
                         <gloss type="term" xml:id="UT22084-057-006-1205">
-                            <term>three groups</term>
+                            <term>three categories</term>
                             <term xml:lang="Bo-Ltn">phung po gsum </term>
                             <term xml:lang="bo">ཕུང་པོ་གསུམ།</term>
                             <term xml:lang="Sa-Ltn"/>
-                            <term type="definition">This can refer to a group of three persons: (1) noble beings who are defined as “the group
+                            <term type="definition">This refers to three categories of persons: (1) noble beings who are defined as “the category
                                 determined by the ultimate” (<foreign xml:lang="Bo-Ltn" type="term">yang dag par nges pa’i phung po</foreign>), (2)
                                 those who have cut the roots of virtue or committed the five deeds with immediate retribution and are defined as “the
-                                group determined by wrongdoing” (<foreign xml:lang="Bo-Ltn" type="term">log par nges pa’i phung po</foreign>), or (3)
-                                others who belong to the “indeterminate group” (<foreign xml:lang="Bo-Ltn" type="term">ma nges pa’i phung
+                                category determined by wrongdoing” (<foreign xml:lang="Bo-Ltn" type="term">log par nges pa’i phung po</foreign>), or (3)
+                                others who belong to the “indeterminate category” (<foreign xml:lang="Bo-Ltn" type="term">ma nges pa’i phung
                                 po</foreign>).</term>
                         </gloss>
                     </item>
