--- a/translations/kangyur/translations/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
+++ b/translations/kangyur/translations/036-009_toh44-38-chapter_38_the_dwellings_of_bodhisattvas.xml
@@ -13,7 +13,7 @@
                                 <title type="longTitle" xml:lang="Bo-Ltn">shin tu rgyas pa chen po’i
                                         mdo sangs rgyas phal po che zhes bya ba las byang chub sems
                                         pa’i gnas kyi le’u ste sum cu brgyad pa</title>
-                                <title type="longTitle" xml:lang="bo">ཤིན་ཏུ་རྒྱས་པ་ཆེན་པོའི་མདོ་སངས་རྒྱས་ཕལ་པོ་ཆེ་ཞེས་བྱ་བ་ལས་བྱང་ཆུབ་སེམ་པའི་གནས་ཀྱི་ལེའུ་སྟེ་སུམ་ཅུ་བརྒྱད་པ།</title>
+                                <title type="longTitle" xml:lang="bo">ཤིན་ཏུ་རྒྱས་པ་ཆེན་པོའི་མདོ་སངས་རྒྱས་ཕལ་པོ་ཆེ་ཞེས་བྱ་བ་ལས་བྱང་ཆུབ་སེམས་པའི་གནས་ཀྱི་ལེའུ་སྟེ་སུམ་ཅུ་བརྒྱད་པ།</title>
                                 <title type="longTitle" xml:lang="en">“The Dwellings of
                                         Bodhisattvas,” Chapter 38 of the Extensive Sūtra “The
                                         Ornaments of the Buddhas”</title>
@@ -38,7 +38,7 @@
                                 <sponsor ref="sponsors.xml#sponsor-35">Thirty, Twenty</sponsor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt status="1.a">
@@ -78,7 +78,7 @@
                                 </bibl>
                         </sourceDesc>
                         <notesStmt>
-                                <note type="lastUpdated" date-time="2023-06-08T05:21:18.275Z" user="admin">08/06/2023 05:21:18</note>
+                                <note type="lastUpdated" date-time="2023-06-08T17:54:28.478Z" user="admin">08/06/2023 17:54:28</note>
                                 <note type="updated" update="text-version" value="0.0.1" date-time="2021-03-17T02:19:39.295Z" user="amy">Auto
                                         (update-sponsorship)</note>
                                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-05-11T05:18:35.836Z" user="amy">Auto
@@ -122,6 +122,7 @@
                                         (update-contributors)</note>
                             <note type="updated" update="translation-status" value="1.a" date-time="2023-06-08T05:21:14.055Z" user="martina-cotter">1.a</note>
                             <note type="updated" update="text-version" value="1.0.0" date-time="2023-06-08T05:21:14.055Z" user="martina-cotter">First published version</note>
+                            <note type="updated" update="text-version" value="1.0.1" date-time="2023-06-08T17:54:25.579Z" user="martina-cotter">Updated typo.</note>
                         </notesStmt>
                 </fileDesc>
         </teiHeader>
