--- a/translations/kangyur/translations/051-002_toh114,527-king_of_array_of_all_dharma_qualities.xml
+++ b/translations/kangyur/translations/051-002_toh114,527-king_of_array_of_all_dharma_qualities.xml
@@ -49,7 +49,7 @@
                     Gentry</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.8.18 <date>2022</date>
+                <edition>v 1.8.19 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -96,7 +96,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-20T19:39:57.631Z" user="celso">20/01/2023 19:39:57</note>
+                <note type="lastUpdated" date-time="2023-06-08T19:47:20.983Z" user="admin">08/06/2023 19:47:20</note>
                 <note type="updated" update="text-version" value="v 1.06" date-time="2019-06-18T16:06:08.091Z" user="celso">v 1.06 2019</note>
                 <note type="updated" update="text-version" value="v 1.07" date-time="2019-06-21T14:29:29.678Z" user="celso">v 1.07 2019</note>
                 <note type="updated" update="text-version" value="v 1.8.1" date-time="2019-10-07T10:27:24.685Z" user="admin">Publication statement
@@ -117,7 +117,7 @@
     <note type="updated" update="text-version" value="1.8.12" date-time="2021-03-16T15:54:02.531Z" user="celso">added italics to "par phud"</note>
     <note type="updated" update="text-version" value="1.8.13" date-time="2021-03-17T16:02:26.628Z" user="celso">minor typo</note>
     <note type="updated" update="text-version" value="1.8.14" date-time="2021-04-08T17:26:23.622Z" user="celso">minor correction to format of a citation and added pending link</note>
-                <note type="updated" update="text-version" value="1.8.15" date-time="2021-04-30T00:09:54.305Z" user="celso">commented out a &lt;ref&gt; in the intro that no longer follows our standard practice for announcing folio diparity in vol 88 texts</note>    <note type="updated" update="text-version" value="1.8.16" date-time="2022-03-02T18:58:58.221Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.8.17" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.8.18" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.8.15" date-time="2021-04-30T00:09:54.305Z" user="celso">commented out a &lt;ref&gt; in the intro that no longer follows our standard practice for announcing folio diparity in vol 88 texts</note>    <note type="updated" update="text-version" value="1.8.16" date-time="2022-03-02T18:58:58.221Z" user="celso">update cache for a note missing on distribution</note>    <note type="updated" update="text-version" value="1.8.17" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.8.18" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.8.19" date-time="2023-06-08T19:47:18.139Z" user="martina-cotter">Updated typo.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -616,7 +616,7 @@
                             as such in this translation. </note>
                     </p>
                     <p tid="37"> “Blessed One, please teach us that powerful dhāraṇī!” pleaded the
-                        bodhisattvsas. <ref cRef="F.185.a" key="toh114" type="folio" xml:id="UT22084-051-002-249"/>
+                        bodhisattvas. <ref cRef="F.185.a" key="toh114" type="folio" xml:id="UT22084-051-002-249"/>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-051-002-46"/>
                     <p tid="38">The Blessed One, the Thus-Gone One, then uttered this dhāraṇī with
@@ -1534,13 +1534,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-051-002-163">
+                        <gloss xml:id="UT22084-051-002-163" type="term" mode="match">
                             <term>bhūta</term>
-                            <term xml:lang="Bo-Ltn">’byung po </term>
-                            <term xml:lang="bo">འབྱུང་པོ།</term>
-                            <term xml:lang="Sa-Ltn">bhūta</term>
-                            <term type="definition">A generic term for “spirit” or “ghost.” They can
-                                be malevolent or benevolent.</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested">’byung po</term>
+                            <term xml:lang="bo" type="sourceAttested">འབྱུང་པོ།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhūta</term>
+                            <term type="definition">A generic term for “spirit” or “ghost.” They can be malevolent or benevolent.</term>
                         </gloss>
                     </item>
                     <item>
