--- a/translations/kangyur/translations/058-002_toh153-the_sutra_of_the_questions_of_the_naga_king_sagara_1.xml
+++ b/translations/kangyur/translations/058-002_toh153-the_sutra_of_the_questions_of_the_naga_king_sagara_1.xml
@@ -8,6 +8,7 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Sāgara­nāga­rāja­paripṛcchā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">klu’i rgyal po rgya mtshos zhus pa</title>
                 <title type="mainTitle" xml:lang="bo">ཀླུའི་རྒྱལ་པོ་རྒྱ་མཚོས་ཞུས་པ།</title>
+                <title type="longTitle" xml:lang="en">The Noble Great Vehicle Sūtra “The Questions of the Nāga King Sāgara”</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Ārya­sāgara­nāga­rāja­paripṛcchānāma­mahāyāna­sūtra</title>
                 <title type="longTitle" xml:lang="bo">འཕགས་པ་ཀླུའི་རྒྱལ་པོ་རྒྱ་མཚོས་ཞུས་པ་ཞེས་བྱ་བ་ཐེག་པ་ཆེན་པོའི་མདོ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">’phags pa klu’i rgyal po rgya mtshos zhus pa zhes bya ba theg pa chen po’i mdo</title>
@@ -28,7 +29,7 @@
                     Chon &amp; family, Lee Hoi Lang &amp; family, Late Lim Kim Heng, Late Low Lily</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.6 <date>2021</date>
+                <edition>v 1.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -64,7 +65,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-01-18T15:34:30.349Z" user="celso">18/01/2023 15:34:30</note>
+                <note type="lastUpdated" date-time="2023-06-13T12:44:46.5Z" user="admin">13/06/2023 12:44:46</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2020-01-27T13:00:51.739Z" user="mike">2.h</note>
                 <note type="updated" update="translation-status" value="2.g" date-time="2020-06-26T10:01:25.645Z" user="line-tofte">2.g</note>
@@ -95,6 +96,7 @@
                 <note type="updated" update="text-version" value="1.0.4" date-time="2022-07-26T06:08:31.885Z" user="cabie-sim">Auto (update-titles)</note>
                 <note type="updated" update="text-version" value="1.0.5" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
                 <note type="updated" update="text-version" value="1.0.6" date-time="2023-01-18T14:48:43.396Z" user="celso">Auto (removing-tid-from-back-list-items)</note>
+                <note type="updated" update="text-version" value="1.0.7" date-time="2023-06-13T12:44:43.601Z" user="celso">added long english title</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -4848,14 +4850,7 @@
                             <term xml:lang="Bo-Ltn" status="verified">nyon mongs</term>
                             <term xml:lang="bo">ཉོན་མོངས།</term>
                             <term xml:lang="Sa-Ltn" status="verified">kleśa</term>
-                            <term type="definition">A term meaning “defilement” or “affliction” that refers to a wide
-                                range of mental factors that disturb the mind and lead to unwholesome deeds by body,
-                                speech, and mind. The Pāli <foreign xml:lang="Pi-Ltn">kilesa</foreign>, Middle-Indic
-                                    <foreign xml:lang="Sa-Ltn">kileśa</foreign>, and Sanskrit <foreign xml:lang="Sa-Ltn">kleśa</foreign> all primarily mean “to soil, stain, defile.” The meaning
-                                “affliction” is a secondary development that derives from the more general
-                                (non-Buddhist) classical understanding of <foreign xml:lang="Sa-Ltn">kliś</foreign> (“to
-                                harm, to afflict”). Both meanings are noted by Buddhist commentators. The basic three
-                                defilements are attachment, aversion, and ignorance.</term>
+                            <term type="definition">A term meaning “defilement” or “affliction” that refers to a wide range of mental factors that disturb the mind and lead to unwholesome deeds by body, speech, and mind. The Pāli <foreign xml:lang="Pi-Ltn">kilesa</foreign>, Middle-Indic <foreign xml:lang="Sa-Ltn">kileśa</foreign>, and Sanskrit <foreign xml:lang="Sa-Ltn">kleśa</foreign> all primarily mean “to soil, stain, defile.” The meaning “affliction” is a secondary development that derives from the more general (non-Buddhist) classical understanding of <foreign xml:lang="Sa-Ltn">kliś</foreign> (“to harm, to afflict”). Both meanings are noted by Buddhist commentators. The basic three defilements are attachment, aversion, and ignorance.</term>
                         </gloss>
                     </item>
                     <item>
@@ -5085,10 +5080,10 @@
                             <term xml:lang="Bo-Ltn" status="verified">lha ma yin</term>
                             <term xml:lang="bo">ལྷ་མ་ཡིན།</term>
                             <term xml:lang="Sa-Ltn" status="verified">asura</term>
-                            <term type="definition">A class of divine beings who are engaged in a mythic war with the
+                        <!--<term type="definition">A class of divine beings who are engaged in a mythic war with the
                                 gods (Skt. <foreign xml:lang="Sa-Ltn" type="term">deva</foreign>) for possession of the
                                 nectar of immortality. In Buddhist cosmology, they inhabit a realm below those of the
-                                gods, from which they observe the gods with intense jealousy.</term>
+                                gods, from which they observe the gods with intense jealousy.</term>-->
                         </gloss>
                     </item>
                     <item>
@@ -5620,23 +5615,12 @@
                         </gloss>
                     </item>
                     <item>
-                        <gloss type="term" xml:id="UT22084-058-004-727">
+                        <gloss xml:id="UT22084-058-004-727" type="term" mode="match">
                             <term>blessed one</term>
-                            <term xml:lang="Bo-Ltn" status="verified">bcom ldan ’das </term>
-                            <term xml:lang="bo">བཅོམ་ལྡན་འདས།</term>
-                            <term xml:lang="Sa-Ltn" status="verified">bhagavān</term>
-                            <term xml:lang="Sa-Ltn" status="verified">bhagavat</term>
-                            <term type="definition">In Buddhist literature, an epithet applied to buddhas, most often to
-                                Śākyamuni. The Sanskrit term generally means “possessing fortune,” but in specifically
-                                Buddhist contexts the term implies that a buddha is in possession of six auspicious
-                                qualities (<foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign>) associated with
-                                complete awakening. The Tibetan term—where <foreign xml:lang="Sa-Ltn" type="term">bcom</foreign> is said to refer to “subduing” the four māras, <foreign xml:lang="Sa-Ltn" type="term">ldan</foreign> to “possessing” the great qualities of
-                                buddhahood, and <foreign xml:lang="Sa-Ltn" type="term">’das</foreign> to “going beyond”
-                                saṃsāra and nirvāṇa—possibly reflects the commentarial tradition where the Sanskrit
-                                    <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> is interpreted, in
-                                addition, as “one who destroys the four māras.” This is achieved either by reading
-                                    <foreign xml:lang="Sa-Ltn" type="term">bhagavat</foreign> as <foreign xml:lang="Sa-Ltn" type="term">bhagnavat</foreign> (“one who broke”), or by tracing
-                                the word <foreign xml:lang="Sa-Ltn" type="term">bhaga</foreign> to the root <foreign xml:lang="Sa-Ltn" type="term">√bhañj</foreign>, “to break.”</term>
+                            <term xml:lang="Bo-Ltn" type="sourceAttested" status="verified">bcom ldan ’das</term>
+                            <term xml:lang="bo" type="sourceAttested">བཅོམ་ལྡན་འདས།</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavān</term>
+                            <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">bhagavat</term>
                         </gloss>
                     </item>
                     <item>
