--- a/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
+++ b/translations/kangyur/placeholders/061-009_toh189-the_sutra_of_the_prophecy_concerning_brahmasri.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" ref="eft:person-434">Sophie McGrath</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2019</date>
+                <edition>v 0.0.7 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-061-009"/>
                 <date/>
             </publicationStmt>
@@ -33,7 +33,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-30T15:11:44.556Z" user="admin">30/05/2023 15:11:44</note>
+                <note type="lastUpdated" date-time="2023-06-13T14:13:42.578Z" user="admin">13/06/2023 14:13:42</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="" date-time="2023-03-22T14:10:50.859Z" user="line-tofte"/>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2023-03-22T14:10:50.859Z" user="line-tofte">Auto (update-publication-status)</note>
@@ -43,6 +43,8 @@
                 <note type="updated" update="text-version" value="0.0.5" date-time="2023-04-17T07:15:28.591Z" user="line-tofte">Auto (update-contributors)</note>
                 <note type="updated" update="translation-status" value="2.h" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">2.h</note>
                 <note type="updated" update="text-version" value="0.0.6" date-time="2023-05-30T15:11:40.167Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="updated" update="translation-status" value="2.g" date-time="2023-06-13T14:13:38.254Z" user="line-tofte">2.g</note>
+                <note type="updated" update="text-version" value="0.0.7" date-time="2023-06-13T14:13:38.254Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
