--- a/translations/kangyur/placeholders/083-016_toh468-the_tantra_of_the_great_vajrabhairava.xml
+++ b/translations/kangyur/placeholders/083-016_toh468-the_tantra_of_the_great_vajrabhairava.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" ref="eft:person-23">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-083-016"/>
                 <date/>
             </publicationStmt>
@@ -33,11 +33,13 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-30T13:04:31.947Z" user="admin">30/06/2022 13:04:31</note>
+                <note type="lastUpdated" date-time="2023-06-15T13:52:13.327Z" user="admin">15/06/2023 13:52:13</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="translation-status" value="3" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">3</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2022-06-30T13:03:50.179Z" user="line-tofte">Auto (update-publication-status)</note>
                 <note type="updated" update="text-version" value="0.0.3" date-time="2022-06-30T13:04:24.066Z" user="line-tofte">Auto (update-contributors)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-06-15T13:52:08.982Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-06-15T13:52:08.982Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
