--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" ref="eft:person-289">Nathaniel Rich</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.4 <date>2023</date>
+                <edition>v 1.1.5 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -71,7 +71,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-06-15T15:37:20.64Z" user="admin">15/06/2023 15:37:20</note>
+        <note type="lastUpdated" date-time="2023-06-15T20:48:16.956Z" user="admin">15/06/2023 20:48:16</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">2.h</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-12T07:53:43.707Z" user="line-tofte">Auto
           (update-publication-status)</note>
@@ -136,6 +136,7 @@
           <note type="updated" update="text-version" value="1.1.2" date-time="2023-06-14T14:30:18.316Z" user="celso">Further edits and 10 new glossary entries</note>
           <note type="updated" update="text-version" value="1.1.3" date-time="2023-06-14T16:47:13.538Z" user="celso">Minor edit and added note</note>
           <note type="updated" update="text-version" value="1.1.4" date-time="2023-06-15T15:37:17.81Z" user="konchog">Numerous fixes throughout, in close consultation with Andreas.</note>
+          <note type="updated" update="text-version" value="1.1.5" date-time="2023-06-15T20:48:14.14Z" user="konchog">One note replaced per AD.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -489,7 +490,7 @@
           </lg>
           <milestone unit="chunk" xml:id="UT22084-101-146-213"/>
           <trailer tid="112">This concludes “<title xml:lang="en">Eight Verses Praising Śrīdevī Mahākālī, the Lady Who Rules All Disease</title>,” composed by the brahmin
-            Vararuci.<note place="end" xml:id="UT22084-101-146-279">Following Toh 1777. The structure of Toh 1090 is rather different (see previous note).</note>
+            Vararuci.<note place="end" xml:id="UT22084-101-146-279">The translation of this colophon follows Toh 1777. As mentioned in the previous note, the structure of the final lines in Toh 1090 is rather different and the colophon there includes the two preceding lines. The translation of the colophon in Toh 1090 reads: “Yama’s Sister, the Wife of the Demon, the Sovereign Goddess of the Desire Realm‍, the Lady Who Rules All Disease, she is the Great Goddess who is praised in eight verses composed by the brahmin Vararuci.”</note>
                     </trailer>
         </div>
       </div>
